Core #2095:Fixed Toc warning issues